--- a/style.css
+++ b/style.css
@@ -1,1 +1,65 @@
 
+body {
+
+    color: rgb(0, 81, 255);
+    background: black;
+    margin: 0px;
+    font-family: "Libre Baskerville", sans-serif;
+
+}
+
+header {
+    border-bottom: solid 2px rgb(0, 229, 255);
+    padding: 18px;
+    font-size: 30px;
+    color: rgb(16, 3, 211);
+
+}
+.chamada {
+
+    background: black;
+    padding-top: 30px;
+    padding-bottom: 40px;
+    display: flex;
+    justify-content: center;
+
+}
+
+.chamada-texto {
+
+    margin-right: 20%;
+    margin-left: 20px;
+}
+h1 {
+    font-size: 40px;
+}
+
+p {
+    font-size: 20px;
+}
+
+.categoria-videos {
+    display: flex;
+    overflow-x: auto;
+    gap: 10px;
+}
+
+.categoria {
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 50px;
+}
+
+.categoria-videos img {
+   
+    height: 200px;
+}
+
+.categoria-videos img:hover {
+   
+    border: 3px solid green;
+}
+
+.categoria h2 {
+    color: rgb(42, 122, 228);
+}
